test/expected/cli/shitbox_usage.out
--- builtin kill with no target ---
shit: 1:1: error: kill: Not enough arguments.
     1 |  kill
       |  ^~~~ here.
shit: note: Try `kill --help` for more info.
rc=2
--- builtin getopts with no arguments ---
shit: 1:1: error: getopts: Not enough arguments.
     1 |  getopts
       |  ^~~~~~~ here.
shit: note: Try `getopts --help` for more info.
rc=2
--- builtin let with no expression ---
shit: 1:1: warning: A let runs arithmetic as a command.
     1 |  let
       |  ^~~ here.
note: Use the ((...)) compound so the operands need no quoting.
shit: 1:0: trace location:
     1 |  SHIT -c let
shit: 1:1: error: Builtin 'let': expression expected.
     1 |  let
       |  ^~~ here.
rc=1
--- calc with no expression ---
shit: 1:1: error: calc has no expression to evaluate.
     1 |  shitbox calc
       |  ^~~~~~~~~~~~ here.
note: Pass an expression such as `calc '2 + 2'`, read a pipe with `-p`, or enter the interactive prompt with `-i`.
rc=1
--- shitbox cp with one operand ---
shit: 1:1: error: cp: Not enough arguments.
     1 |  shitbox cp onlyone
       |  ^~~~~~~~~~~~~~~~~~ here.
shit: note: Try `cp --help` for more info.
rc=2
--- shitbox grep with no pattern ---
shit: 1:1: error: grep: Not enough arguments.
     1 |  shitbox grep
       |  ^~~~~~~~~~~~ here.
shit: note: Try `grep --help` for more info.
rc=2
--- the note is located in the bash mood too ---
shit: 1:1: error: kill: Not enough arguments.
     1 |  shitbox kill
       |  ^~~~~~~~~~~~ here.
shit: note: Try `kill --help` for more info.
rc=2
--- and in the sh mood ---
shit: 1:1: error: mkdir: Not enough arguments.
     1 |  shitbox mkdir
       |  ^~~~~~~~~~~~~ here.
shit: note: Try `mkdir --help` for more info.
rc=2
